objects/Recommendation__c.object
<CustomObject>
    <description>https://doctari.atlassian.net/browse/SFC-3010
As a recruiting user I would like to be able to suggest a suitable candidate directly to the sales department at an opportunity. The sales department must be notified of this so that they can then propose the candidate to the clinic.</description>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>Stores the combination of opportunity and candidate id (set by a flow), so that a duplication rule can be set up</description>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CandidateId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Candidate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>doctor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>caregiver</value>
            </filterItems>
            <infoMessage>Only doctors and caregivers are available for selection</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Recommendations_Candidate</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Recommendations_Opportunity</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectionReason__c</fullName>
        <description>When rejected a reason has to be selected via flow</description>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ANÜ knowledge missing</fullName>
                </value>
                <value>
                    <fullName>Assigned to WW</fullName>
                </value>
                <value>
                    <fullName>Availabilities not matching</fullName>
                </value>
                <value>
                    <fullName>Customer rejected</fullName>
                </value>
                <value>
                    <fullName>Customer staffed internally</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PK rejected</fullName>
                </value>
                <value>
                    <fullName>Prepare CV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherRejectionReason__c</fullName>
        <description>Freetext field to add information when recommendation was rejected</description>
        <label>Other Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>